# ARK-5

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  flash0.txt
.github/workflows/: run.yaml
Compat/PSP/: imports.S  main.c
Compat/PSP/include/: high_mem.h  overclock.h
Compat/PSP/rebootex/: Makefile  main.c
Compat/PSP/src/: high_mem.c  libertas.c  overclock.c  pops4tool.c  syspatch.c  usb_charge.c
Compat/ePSP/: imports.S
Compat/ePSP/include/: vitamem.h
Compat/ePSP/rebootex/: Makefile
Compat/ePSP/src/: filesystem.c  syspatch.c  vitamem.c
Compat/ePSX/: CMakeLists.txt  Makefile
Compat/ePSX/rebootex/: Makefile  main.c
Compat/vPSP/: CMakeLists.txt  imports.S
Compat/vPSP/rebootex/: Makefile  main.c
Compat/vPSP/src/: syspatch.c
Core/: CMakeLists.txt
Core/Compat/: CMakeLists.txt
Core/Compat/PSP/: CMakeLists.txt  Makefile  main.c  pspcompat.elf  pspcompat.prx
Core/Compat/PSP/include/: high_mem.h  overclock.h
Core/Compat/PSP/rebootex/: Makefile  main.c  main.elf  payload.h
Core/Compat/PSP/rebootex/.deps/: patches.Po
Core/Compat/PSP/src/: high_mem.c  libertas.c  overclock.c  pops4tool.c  region_free.c  syspatch.c
Core/Compat/Pentazemin/include/: common.h
Core/Compat/Pentazemin/src/: adrenaline.c
Core/Compat/ePSP/: CMakeLists.txt  Makefile  imports.S  main.c  vitacompat.elf  vitacompat.prx
Core/Compat/ePSP/include/: vitamem.h
Core/Compat/ePSP/rebootex/: Makefile  main.c  main.elf  payload.h
Core/Compat/ePSP/rebootex/.deps/: patches.Po
Core/Compat/ePSP/src/: filesystem.c  popspatch.c  syspatch.c  vitamem.c
Core/Compat/ePSX/: CMakeLists.txt  Makefile  imports.S  main.c  vitapops.elf  vitapops.prx
Core/Compat/ePSX/rebootex/: Makefile  main.c  main.elf  payload.h
Core/Compat/ePSX/src/: popsdisplay.c  syspatch.c  vitaflash.c
Core/Compat/vPSP/: Makefile  main.c  vitaplus.elf  vitaplus.prx
Core/Compat/vPSP/btcnf/: psvbtjnf.txt  psvbtknf.txt
Core/Compat/vPSP/rebootex/: Makefile  main.c  main.elf  payload.h
Core/Compat/vPSP/src/: adrenaline.c  impose_patch.c  init_patch.c  syspatch.c  usbcam.c  vitamem.c
Core/Compat/vPSP_old/: CMakeLists.txt  Makefile
Core/Compat/vPSP_old/btcnf/: psvbtknf.txt
Core/Compat/vPSP_old/rebootex/: Makefile  main.c
Core/Compat/vPSP_old/src/: impose_patch.c  syspatch.c  vitamem.c
Core/Inferno/: CMakeLists.txt  Makefile  inferno.elf  inferno.prx  main.c
Core/Inferno/src/: iodrv_funcs.c  isocache.c  isoread.c  umd.c
Core/PopCorn/: CMakeLists.txt  Makefile  main.c  popcorn.elf  popcorn.prx
Core/PopCorn/src/: syspatch.c
Core/Stargate/: Makefile  main.c  stargate.elf  stargate.prx
Core/Stargate/src/: chn_iso.c  gamefix.c  io_patch.c  key_decrypt.c
Core/SystemControl/: CMakeLists.txt  Makefile  exports.exp  main.c  systemctrl.elf  systemctrl.prx
Core/SystemControl/debug/: dummy.c  jumper.c  printk.c
Core/SystemControl/include/: imports.h  init.h  rebootex.h
Core/SystemControl/src/: controller.c  cpuclock.c  cryptography.c  exitgame.c  gameinfo.c  hooknids.c  init.c  interruptman.c  kubridge.c  loadercore.c  mediasync.c  modulemanager.c  msstor_cache.c  nidresolver.c  oe_malloc.c  plugin.c  rebootex.c  savedata_patch.c  sctrl.c  sctrl_hen.c  sctrl_se.c  sysmem.c  syspatch.c  utility.c
Core/VSHControl/: CMakeLists.txt  Makefile  exports.exp  imports.S  main.c  vshctrl.elf  vshctrl.prx
Core/VSHControl/src/: custom_update.c  dirent_track.c  isoreader.c  registry.c  usbdevice.c  virtual_mp4.c  virtual_pbp.c  vshmenu.c  vshpatch.c  xmbiso.c
Core/XMBControl/: Makefile  exports.exp  main.c  stub.S  xmbctrl.elf  xmbctrl.prx
Core/XMBControl/include/: main.h  settings.h
Core/XMBControl/src/: config.c  plugins.c  vshcube.c  vshgu.c  vshmenu.c  xmbpatch.c
Inferno/: CMakeLists.txt  Makefile  main.c
Inferno/src/: iodrv_funcs.c  isocache.c  isoread.c  umd.c
PopCorn/: CMakeLists.txt  Makefile  main.c
PopCorn/src/: syspatch.c
Resources/ARK_01234/: SETTINGS.TXT
Resources/Language/Translations/resources/: lang_chs.json  lang_cht.json  lang_de.json  lang_es.json  lang_fr.json  lang_grk.json  lang_it.json  lang_jp.json  lang_ko.json  lang_lat.json  lang_latgr.json  lang_nl.json  lang_pol.json  lang_pt.json  lang_ro.json  lang_ru.json  lang_tr.json  lang_ukr.json
Stargate/: CMakeLists.txt  Makefile
Stargate/include/: main.h
Stargate/src/: chn_iso.c  gamefix.c  hide.c  io_patch.c  nodrm_patch.c
SystemControl/: CMakeLists.txt  Makefile  main.c
SystemControl/include/: config.h  controller.h  elf.h  missingfunc.h  modulemanager.h  plugin.h  sysmem.h  systemctrl_private.h
SystemControl/src/: configparser.c  controller.c  cpuclock.c  cryptography.c  exitgame.c  hooknids.c  init.c  interruptman.c  leda.c  loadercore.c  mediasync.c  missingfunc.c  modulemanager.c  oe_malloc.c  patches.c  plugin.c  rebootex.c  sctrl.c  sctrl_hen.c  sctrl_se.c  settings.c  syspatch.c  utility.c
VSHControl/: Makefile  main.c
VSHControl/include/: main.h  virtual_pbp.h
VSHControl/src/: custom_update.c  disctype.c  isoreader.c  usbdevice.c  virtual_mp4.c  xmbiso.c
XMBControl/: CMakeLists.txt  Makefile  main.c  stub.S
XMBControl/include/: main.h
XMBControl/src/: battery.c  config.c  configparser.c  list.c  plugins.c  settings.c  utils.c  vshcube.c  vshgu.c  vshmenu.c  xmbpatch.c
build-tools/pack/: flash0.txt
